Bug 610769: Align the Firefox menu with the Firefox button, r=dao, a=gavin
UltraBlame original commit: e6809237f52ca3179857c90d213a19df46a897e9

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -39,6 +39,11 @@
     -moz-border-right-colors: rgba(255,255,255,.5) rgba(43,8,65,.9);
   }
 
+  #appmenu-popup {
+    margin-top: -1px;
+    -moz-margin-start: 1px;
+  }
+
   
 
   #identity-popup,
